# FireBoar

./: .gitignore  .htaccess  README.md  build.sh  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
assets/: manifest.json
fireboar/: imports.py  storage.py  training.py  utils.py
fireboar/pages/: home.py  sessions.py  start.py  training_edit.py
tests/: test_training.py
