[project]
name = "FireBoar"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Julian Prolejko", email = "self@j3x.dev" }
]
dependencies = [
    "flet>=0.80.5"
]

[dependency-groups]
dev = [
    "flet-cli>=0.80.5",
    "flet-desktop-light>=0.80.5",
    "flet-web>=0.80.5",
]

[tool.flet]
org = "J3X.dev"
product = "FireBoar"
company = "j3x"
copyright = "Copyright (C) 2023-2026 by J3X"
