[project]
name = "FireBoar"
version = "0.2.0"
description = "Poczuj w sobie siłę dzika!"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Julian Prolejko", email = "self@j3x.dev" }
]
dependencies = [
    "flet==0.80.6.dev7659",
    "flet-audio==0.80.6.dev7659",
    "dataclasses-json",
    "openpyxl",
]

[tool.flet.flutter.pubspec.dependency_overrides]
flet = { git = { url = "https://github.com/flet-dev/flet.git", ref = "main", path = "packages/flet" } }

[dependency-groups]
dev = [
]

[tool.flet]
org = "J3X.dev"
product = "FireBoar"
company = "j3x"
copyright = "Copyright (C) 2026 by J3X"

[tool.flet.app.boot_screen]
show = true
message = "Przygotowuję dzikie linijki kodu podczas pierwszego odpalenia, chwileczkę..."

[tool.flet.app.startup_screen]
show = true
message = "Rozgrzewam się..."

[tool.flet.app]
exclude = [".git", "env", "dist", "example_data", "splash", "uploads", "build"]
